adding cropped Images, adding header in html

--- a/Index.html
+++ b/Index.html
@@ -1,41 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html" xmlns:display="">
+<body>
 <head>
     <meta charset="UTF-8">
-    <title>CleanNow</title>
+    <title >CleanNow</title>
     <section>
         <div style="overflow: hidden;">
             <p style="float: left; text-indent: 280px;">Welcome to our Cleaning Company</p>
-            <p style="float: left; text-indent: 400px;">Phone:+16176526246 Email:info@comapny.com</p>
+            <p style="float: left; text-indent: 400px;">Phone:+16176526246 Email:<span style ="color:lightseagreen;">info@comapny.com</span></p>
         </div>
     </section>
     <hr >
     <section>
-    <div style="overflow: hidden;">
-        <H1 style="float: left; text-indent: 280px;">CleanNow</H1>
-
-
-      <!--  <p style=" margin-left:10%">Home</p>
-         <p style="margin-left:20%;">About Us</p>
-         <p style="text-indent: 780px;">Our Works</p>
-         <p style="text-indent: 880px;">Pages</p>
-         <p style="text-indent: 980px;">Blog</p>
-         <p style="text-indent: 1080px;">Contact</p>
-         <p style="text-indent: 1180px;">Request A quote</p>-->
-     </div>
+    <div style="overflow: hidden; width: 100%">
+        <H1 style="float: left; margin-left: 20%; color:lightseagreen " >CleanNow</H1>
+         <p style=" float: left; margin-left: 20%; width:5%">Home</p>
+         <p style=" float: left; width:7%">About Us</p>
+         <p style=" float: left; width:5%">Our Works</p>
+         <p style=" float: left; width:5%">Pages</p>
+         <p style=" float: left; width:5%">Blog</p>
+         <p style=" float: left; width:5%">Contact</p>
+         <p style=" float: left; width:15%">Request A quote</p>
+      </div>
         </section>
     <hr>
 </head>
-<body>
-<section>
-<img src="Images/slider.png" height="70%" width="100%"/>
-</section>
-<section>
-    <H1>
-        High quality cleaning services. better and faster cleaning solution!
-    </H1>
-    <p>The phrasal sequence of the Lorem lpsum text is now so widespread and commonplace that many DTP programmes can generate  dummy text using the starting sequence</p>
-    <a href="#self">Get in touch with us</a>
-</section>
-</body>
+
+
 </html>
