--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html" xmlns:display="">
-<body>
+<html>
 <head>
     <meta charset="UTF-8">
     <title >CleanNow</title>
@@ -12,19 +11,30 @@
     </section>
     <hr >
     <section>
-    <div style="overflow: hidden; width: 100%">
-        <H1 style="float: left; margin-left: 20%; color:lightseagreen " >CleanNow</H1>
-         <p style=" float: left; margin-left: 20%; width:5%">Home</p>
-         <p style=" float: left; width:7%">About Us</p>
-         <p style=" float: left; width:5%">Our Works</p>
-         <p style=" float: left; width:5%">Pages</p>
-         <p style=" float: left; width:5%">Blog</p>
-         <p style=" float: left; width:5%">Contact</p>
-         <p style=" float: left; width:15%">Request A quote</p>
-      </div>
-        </section>
+        <div style="overflow: hidden; width: 100%">
+            <H1 style="float: left; margin-left: 20%; color:lightseagreen " >CleanNow</H1>
+            <p style=" float: left; margin-left: 20%; width:5%">Home</p>
+            <p style=" float: left; width:7%">About Us</p>
+            <p style=" float: left; width:5%">Our Works</p>
+            <p style=" float: left; width:5%">Pages</p>
+            <p style=" float: left; width:5%">Blog</p>
+            <p style=" float: left; width:5%">Contact</p>
+            <p style=" float: left; width:15%">Request A quote</p>
+        </div>
+    </section>
     <hr>
 </head>
-
-
+<body>
+<section>
+    <img src="Images/slider.png" height="70%" width="100%"/>
+</section>
+<section>
+    <H1 style="width:20%">
+        High quality cleaning services. better and faster cleaning solution!
+    </H1>
+    <H6 style="width:20%">The phrasal sequence of the Lorem lpsum text is now so widespread and commonplace that many DTP programmes can generate  dummy text using the starting sequence</H6>
+    <a href="#self">Get in touch with us</a>
+</section>
+</body>
 </html>
+
