--- a/Index.html
+++ b/Index.html
@@ -35,6 +35,36 @@
     <H6 style="width:20%">The phrasal sequence of the Lorem lpsum text is now so widespread and commonplace that many DTP programmes can generate  dummy text using the starting sequence</H6>
     <a href="#self">Get in touch with us</a>
 </section>
+<BR><BR>
+<section>
+    <H1 align="center" style ="color:lightseagreen;">Why Choose Us</H1>
+</section>
+<br>
+<section style="float:left; width: 100% ">
+    <section style="float:left; width:27%; margin-left: 10%">
+        <H3 align="center" style ="color:lightseagreen;">Pick a Time</H3>
+        <svg>
+            <circle cx="60%" cy="50%" r="50" fill= "lightseagreen" ></circle>
+        </svg>
+        <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
+    </section>
+
+    <section style="float:left; width:27%;">
+        <H3 align="center" style ="color:lightseagreen;">Book Insanstly</H3>
+        <svg>
+            <circle cx="60%" cy="50%" r="50" fill= "lightseagreen"></circle>
+        </svg>
+        <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
+    </section>
+
+    <section style="float:left; width:27%;">
+        <H3 align="center" style ="color:lightseagreen;">Your pro arrives</H3>
+        <svg>
+            <circle cx="60%" cy="50%" r="50" fill= "lightseagreen"></circle>
+        </svg>
+        <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
+    </section>
+</section>
 </body>
 </html>
 
