adding "Cleaning Services" section

--- a/Index.html
+++ b/Index.html
@@ -65,6 +65,36 @@
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
     </section>
 </section>
+<br><br><br>
+<section>
+    <H1 align="center" style ="color:lightseagreen;">Cleaning Services</H1>
+</section>
+<br><br><br>
+<section style="float:left;">
+    <section style="float:left; width:20%; margin-left: 10%">
+        <H3 align="center" style ="color:lightseagreen;">Resendential Cleaning</H3>
+        <img src="Images/services.png" height="186" width="269"/>
+        <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
+    </section>
+    <section style="float:left; width:20%;">
+        <H3 align="center" style ="color:lightseagreen;">Commertial Cleaning</H3>
+        <img src="Images/services@2x.png" height="186" width="269"/>
+        <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
+    </section>
+    <section style="float:left; width:20%;">
+        <H3 align="center" style ="color:lightseagreen;">Office Cleaning</H3>
+        <img src="Images/services@2x 2.png" height="186" width="269"/>
+        <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
+    </section>
+    <section style="float:left; width:20%;">
+        <H3 align="center" style ="color:lightseagreen;">Seasonal Cleaning</H3>
+        <img src="Images/services@2x 3.png" height="186" width="269"/>
+        <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
+    </section>
+</section>
+
+<br><br><br>
+
 </body>
 </html>
 
