adding "More Services" section

--- a/Index.html
+++ b/Index.html
@@ -95,6 +95,26 @@
 
 <br><br><br>
 
+<H1 align="center" style ="color:lightseagreen;">More Services</H1>
+<section style="float:left; width:100%; margin-left:10%;">
+    <section style="float:left;width:40%; ">
+        <img src="Images/about.png" height="400px" width="100%"/>
+    </section>
+    <section style="float:left;width:40%;">
+        <H4>Best Cleaning Company</H4>
+        <H2 style ="color:lightseagreen;">About Company</H2>
+        <H5>We're ready to clean up your home,office house or warehouse with an astounding and acute precision</H5>
+        <H3 style ="color:lightseagreen;">We know the area</H3>
+        <p>We ensure you from not doing our job as good as we promise.</p>
+        <H3 style ="color:lightseagreen;">Quality cleans every time</H3>
+        <p>Our long history and regular clients prove that our service is qualified.</p>
+        <H3 style ="color:lightseagreen;">Highly-Trained Technicians</H3>
+        <p>We ensure you from not doing our job as we promise.</p>
+        <a href="#self">More Info</a>
+    </section>
+
+</section>
+
 </body>
 </html>
 
