adding "team" section

--- a/Index.html
+++ b/Index.html
@@ -112,8 +112,36 @@
         <p>We ensure you from not doing our job as we promise.</p>
         <a href="#self">More Info</a>
     </section>
-
 </section>
+<br><br>
+<section style="float:left; width:100%;">
+    <div style="float:left;width:40%; margin-left: 10% ">
+        <H3 align="center">Want to get 20% off? Save the time and money?</H3>
+    </div>
+    <div style="float:left;width:40%; ">
+        <a href="#self">More Service</a>
+    </div>
+</section>
+
+<h1 align="center" style ="color:lightseagreen;">Meet our Team</h1>
+<section style="float:left; width:100%;">
+    <div style="float:left; width:30%; margin-left: 10%" >
+        <img src="Images/team@2x copy.png" height="200" width="200" style=" margin-left: 25%"/>
+        <h3 align="center" style ="color:lightseagreen;">Jame Cawdale</h3>
+        <p align="center">Office Cleaner</p>
+    </div>
+    <div style="float:left; width:30%;">
+        <img src="Images/team@2x copy 2.png" height="200" width="200" style=" margin-left: 25%" />
+        <h3 align="center" style ="color:lightseagreen;">Joseph Doe</h3>
+        <p align="center">Office Cleaner</p>
+    </div>
+    <div style="float:left; width:30%;">
+        <img src="Images/team@2x copy 3.png" height="200" width="200" style=" margin-left: 25%"/>
+        <h3 align="center" style ="color:lightseagreen;">Daina Mason</h3>
+        <p align="center">Office Cleaner</p>
+    </div>
+</section>
+<br><br>
 
 </body>
 </html>
