adding "remaining" sections

--- a/Index.html
+++ b/Index.html
@@ -143,6 +143,165 @@
 </section>
 <br><br>
 
+<H3 align="center" style ="color:lightseagreen;">Pricing Tables</H3>
+<br><br><br>
+<section style="float:left; width:100%;">
+    <section  style="float:left; width:20%; margin-left: 10%">
+        <p>Office Cleaning</p>
+        <H1>$120</H1>
+        <p>Per Month</p>
+        <p>Cleaning Floors</p>
+        <p>Cleaning windows</p>
+        <p>Clean the walls</p>
+        <p>Organization of furniture</p>
+        <p>Home Servicesx</p>
+        <p>Buy Now</p>
+    </section>
+    <section  style="float:left; width:20%;">
+        <p>Home Cleaning</p>
+        <H1>$120</H1>
+        <p>Per Month</p>
+        <p>Cleaning Floors</p>
+        <p>Cleaning windows</p>
+        <p>Clean the walls</p>
+        <p>Organization of furniture</p>
+        <p>Home Servicesx</p>
+        <p>Buy Now</p>
+    </section>
+    <section  style="float:left; width:20%;">
+        <p>Carpet Cleaning</p>
+        <H1>$120</H1>
+        <p>Per Month</p>
+        <p>Cleaning Floors</p>
+        <p>Cleaning windows</p>
+        <p>Clean the walls</p>
+        <p>Organization of furniture</p>
+        <p>Home Servicesx</p>
+        <p>Buy Now</p>
+    </section>
+    <section  style="float:left; width:20%;">
+        <p>Apartment Cleaning</p>
+        <H1>$120</H1>
+        <p>Per Month</p>
+        <p>Cleaning Floors</p>
+        <p>Cleaning windows</p>
+        <p>Clean the walls</p>
+        <p>Organization of furniture</p>
+        <p>Home Servicesx</p>
+        <p>Buy Now</p>
+    </section>
+</section>
+<section>
+    <H1 align="center">Latest Blog</H1>
+</section>
+<section style="float:left;">
+    <section style="float:left; width:27%; margin-left: 10%">
+        <img src="Images/latest blog@2x copy.png" height="200px" width="100%"/>
+        <p>03 Nov,2018</p>
+        <h3>The best things you can do for your furniture</h3>
+        <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
+        <section style="display: inline-flex;
+                     align-self: center;">
+
+            <svg style="display: block; "><circle cx="5%" cy="10%" r="15" fill= "grey" ></circle></svg>
+            <section style="position: relative"><p> By:John Doe</p></section>
+        </section>
+    </section>
+    <section style="float:left; width:27%; ">
+        <img src="Images/latest blog@2x copy 2.png" height="200px" width="100%"/>
+        <p>03 Nov,2018</p>
+        <h3>The best things you can do for your furniture</h3>
+        <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
+        <p>By: John Doe</p>
+    </section>
+    <section style="float:left; width:27%;">
+        <img src="Images/latest blog@2x copy 3.png" height="200px" width="100%"/>
+        <p>03 Nov,2018</p>
+        <h3>The best things you can do for your furniture</h3>
+        <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
+        <p>By: John Doe</p>
+    </section>
+</section>
+
+<section style="float:left; width:100%;">
+    <section style="float:left; width:40%; margin-left: 30%">
+        <H1 align="center">Testimonials</H1>
+        <img src="Images/testimonials@2x.png" height="381" width="383"/>
+        <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
+        <p>John Doe,Ceo Founder, Company</p>
+    </section>
+</section>
+
+
+<section>
+    <H2 align="center ">Our Projects</H2>
+</section>
+<br><br>
+<section>
+    <img src="Images/projects@2x copy.png" height="20%" width="100%"/>
+    <img src="Images/quote.png" height="80%" width="100%"/>
+</section>
+
+<section>
+    <section>
+        <p>Get A Instant Quote</p>
+    </section >
+    <form>
+
+        <p>
+            <input type="text"
+                   id="name" pattern="[a-zA-Z\s]+" minlength="3" maxlength="20" placeholder="Your Name*" size ="30%" required>
+        </p>
+        <p>
+
+            <input type="email" placeholder="Your Email*" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" size ="30%" required>
+        <p>
+            <input type="text" placeholder="Phone" size ="30%" pattern="^\d{10}$">
+        </p>
+        <p>
+            <textarea placeholder="MESSAGE" maxlength="180" size ="30%" rows="5"></textarea>
+        </p>
+        <p>
+            <button>Send Message</button>
+        </p>
+    </form>
+
+
+</section>
+
+
+
+
+<footer style="float:left;">
+    <section style="float:left; width:30%; margin-left: 10%">
+        <H1>CleanNow</H1>
+        <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
+        <p>Copyright 2018 <b>CleanNow.</b> All Right Reserved</p>
+    </section>
+    <section style="float:left; width:20%; ">
+        <H3>Quick View</H3>
+        <p>Home</p>
+        <p>About</p>
+        <p>Services</p>
+        <p>Projects</p>
+        <p>Quote</p>
+    </section>
+    <section style="float:left; width:20%; ">
+        <H3>Services</H3>
+        <p>Commercial Cleaning</p>
+        <p>House Cleaning</p>
+        <p>Office Cleaning</p>
+        <p>Glass Cleaning</p>
+        <p>Window Cleaning</p>
+    </section>
+    <section style="float:left; width:20%; ">
+        <H3>Contact Us</H3>
+        <p>Phone: +12345679332</p>
+        <p>Email:info@company.com</p>
+        <p>Fax:+13424225314</p>
+    </section>
+</footer>
+
 </body>
 </html>
 
