updating Index.html

--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <section>
         <div style="overflow: hidden;">
             <p style="float: left; text-indent: 280px;">Welcome to our Cleaning Company</p>
-            <p style="float: left; text-indent: 400px;">Phone:+16176526246 Email:<span style ="color:lightseagreen;">info@comapny.com</span></p>
+            <add style="float: left; text-indent: 400px;">Phone:+16176526246 Email:<span style ="color:lightseagreen;">info@comapny.com</span></add>
         </div>
     </section>
     <hr >
@@ -192,49 +192,52 @@
     </section>
 </section>
 <section>
-    <H1 align="center">Latest Blog</H1>
+    <H1 align="center" style ="color:lightseagreen ;">Latest Blog</H1>
 </section>
 <section style="float:left;">
     <section style="float:left; width:27%; margin-left: 10%">
         <img src="Images/latest blog@2x copy.png" height="200px" width="100%"/>
         <p>03 Nov,2018</p>
-        <h3>The best things you can do for your furniture</h3>
+        <h3 style ="color:lightseagreen ;">The best things you can do for your furniture</h3>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
         <section style="display: inline-flex;
                      align-self: center;">
 
             <svg style="display: block; "><circle cx="5%" cy="10%" r="15" fill= "grey" ></circle></svg>
-            <section style="position: relative"><p> By:John Doe</p></section>
+            <section style="position: relative"><p>By: <b>John Doe</b></p></section>
         </section>
     </section>
     <section style="float:left; width:27%; ">
         <img src="Images/latest blog@2x copy 2.png" height="200px" width="100%"/>
         <p>03 Nov,2018</p>
-        <h3>The best things you can do for your furniture</h3>
+        <h3 style ="color:lightseagreen ;">The best things you can do for your furniture</h3>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
-        <p>By: John Doe</p>
+        <p>By: <b>John Doe</b></p>
     </section>
     <section style="float:left; width:27%;">
         <img src="Images/latest blog@2x copy 3.png" height="200px" width="100%"/>
         <p>03 Nov,2018</p>
-        <h3>The best things you can do for your furniture</h3>
+        <h3 style ="color:lightseagreen ;">The best things you can do for your furniture</h3>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
-        <p>By: John Doe</p>
+        <p>By: <b>John Doe</b></p>
     </section>
 </section>
 
-<section style="float:left; width:100%;">
-    <section style="float:left; width:40%; margin-left: 30%">
-        <H1 align="center">Testimonials</H1>
-        <img src="Images/testimonials@2x.png" height="381" width="383"/>
-        <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
-        <p>John Doe,Ceo Founder, Company</p>
+<section style="float:left; width:100%; background-color: ghostwhite;">
+    <section style="float:left; width:70%; ">
+        <H2 align="center" style ="color:lightseagreen ; margin-left: 60%" >Testimonials</H2>
+        <br><br>
+        <img src="Images/testimonials@2x.png" height="381" width="383" style=" margin-left: 60%"/>
+        <p style="margin-left: 50%">Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
+        <p style=" margin-left: 60%">John Doe,Ceo Founder, Company</p>
+        <br>   <br>
     </section>
+
 </section>
 
-
+<br><br>
 <section>
-    <H2 align="center ">Our Projects</H2>
+    <H2 align="center " style ="color:lightseagreen">Our Projects</H2>
 </section>
 <br><br>
 <section>
@@ -242,41 +245,42 @@
     <img src="Images/quote.png" height="80%" width="100%"/>
 </section>
 
-<section>
+<section  style="width:20%" >
     <section>
-        <p>Get A Instant Quote</p>
+        <H2 align="center" style ="color:lightseagreen;" >Get A Instant Quote</H2>
     </section >
-    <form>
+    <form >
 
-        <p>
+       <fieldset>
             <input type="text"
-                   id="name" pattern="[a-zA-Z\s]+" minlength="3" maxlength="20" placeholder="Your Name*" size ="30%" required>
-        </p>
-        <p>
+                   id="name" pattern="[a-zA-Z\s]+" minlength="3" maxlength="20" placeholder="Your Name*" style="width: 100%;" required>
+       </fieldset>
+        <fieldset>
 
-            <input type="email" placeholder="Your Email*" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" size ="30%" required>
-        <p>
-            <input type="text" placeholder="Phone" size ="30%" pattern="^\d{10}$">
-        </p>
-        <p>
-            <textarea placeholder="MESSAGE" maxlength="180" size ="30%" rows="5"></textarea>
-        </p>
-        <p>
-            <button>Send Message</button>
-        </p>
+            <input type="email" placeholder="Your Email*" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" style="width: 100%;" required>
+        </fieldset>
+        <fieldset>
+            <input type="text" placeholder="Phone" style="width: 100%;" pattern="^\d{10}$">
+        </fieldset>
+        <fieldset>
+
+            <textarea placeholder="MESSAGE" maxlength="180" style="width: 100%;" rows="5"></textarea>
+        </fieldset>
+            <fieldset>
+                  <button style="align-content: center; width: 100%">Send Message</button>
+            </fieldset>
     </form>
-
 
 </section>
 
 
 
-
+<br><br><br>
 <footer style="float:left;">
     <section style="float:left; width:30%; margin-left: 10%">
-        <H1>CleanNow</H1>
+        <H1 style ="color:lightseagreen;">CleanNow</H1>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
-        <p>Copyright 2018 <b>CleanNow.</b> All Right Reserved</p>
+        <p> &#169; Copyright 2018 <b>CleanNow.</b> All Right Reserved</p>
     </section>
     <section style="float:left; width:20%; ">
         <H3>Quick View</H3>
