--- a/Index.html
+++ b/Index.html
@@ -2,30 +2,34 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <!--title of html page-->
     <title >CleanNow</title>
-    <section>
+    <!--header of the html page-->
+    <header>
         <div style="overflow: hidden;">
             <p style="float: left; text-indent: 280px;">Welcome to our Cleaning Company</p>
             <add style="float: left; text-indent: 400px;">Phone:+16176526246 Email:<span style ="color:lightseagreen;">info@comapny.com</span></add>
         </div>
-    </section>
+    </header>
     <hr >
-    <section>
+    <!--task bar of the page-->
+
         <div style="overflow: hidden; width: 100%">
+            <!--links to various sections of the pages-->
             <H1 style="float: left; margin-left: 20%; color:lightseagreen " >CleanNow</H1>
-            <p style=" float: left; margin-left: 20%; width:5%">Home</p>
-            <p style=" float: left; width:7%">About Us</p>
-            <p style=" float: left; width:5%">Our Works</p>
-            <p style=" float: left; width:5%">Pages</p>
-            <p style=" float: left; width:5%">Blog</p>
-            <p style=" float: left; width:5%">Contact</p>
-            <p style=" float: left; width:15%">Request A quote</p>
+            <a href="#slider"><p style=" float: left; margin-left: 20%; width:5%">Home</p></a>
+            <a href="#about"> <p style=" float: left; width:7%">About Us</p></a>
+            <a href="#ourWork"><p style=" float: left; width:8%">Our Works</p></a>
+            <a href="#pages"><p style=" float: left; width:5%">Pages</p></a>
+            <a href="#blog"> <p style=" float: left; width:5%">Blog</p></a>
+            <a href="#footer"> <p style=" float: left; width:5%">Contact</p></a>
+            <a href="#footer"> <p style=" float: left; width:15%">Request A quote</p></a>
         </div>
-    </section>
     <hr>
 </head>
 <body>
-<section>
+<!--seting the slider image as well as writing text below it-->
+<section id="slider">
     <img src="Images/slider.png" height="70%" width="100%"/>
 </section>
 <section>
@@ -36,19 +40,22 @@
     <a href="#self">Get in touch with us</a>
 </section>
 <BR><BR>
+<!--why choose us section-->
 <section>
     <H1 align="center" style ="color:lightseagreen;">Why Choose Us</H1>
 </section>
 <br>
+<!--Dividing the section into 3 equal parts -->
 <section style="float:left; width: 100% ">
     <section style="float:left; width:27%; margin-left: 10%">
         <H3 align="center" style ="color:lightseagreen;">Pick a Time</H3>
+        <!--Making circles in why choose us section -->
         <svg>
             <circle cx="60%" cy="50%" r="50" fill= "lightseagreen" ></circle>
         </svg>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
     </section>
-
+    <!--Same as above section -->
     <section style="float:left; width:27%;">
         <H3 align="center" style ="color:lightseagreen;">Book Insanstly</H3>
         <svg>
@@ -65,17 +72,23 @@
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
     </section>
 </section>
+<!--giving some  line spaces -->
 <br><br><br>
-<section>
+<!--Cleaning Services Section -->
+<section id="pages">
     <H1 align="center" style ="color:lightseagreen;">Cleaning Services</H1>
 </section>
 <br><br><br>
+<!--Dividing the section into 4 equal parts -->
 <section style="float:left;">
     <section style="float:left; width:20%; margin-left: 10%">
+        <!--Putting heading-->
         <H3 align="center" style ="color:lightseagreen;">Resendential Cleaning</H3>
+        <!--Using cropped image at right position -->
         <img src="Images/services.png" height="186" width="269"/>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
     </section>
+    <!--Same secrions as Above -->
     <section style="float:left; width:20%;">
         <H3 align="center" style ="color:lightseagreen;">Commertial Cleaning</H3>
         <img src="Images/services@2x.png" height="186" width="269"/>
@@ -90,16 +103,20 @@
         <H3 align="center" style ="color:lightseagreen;">Seasonal Cleaning</H3>
         <img src="Images/services@2x 3.png" height="186" width="269"/>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
+        <br><br><br>
     </section>
 </section>
 
-<br><br><br>
+<!--More Services section -->
 
 <H1 align="center" style ="color:lightseagreen;">More Services</H1>
+<!--This section consist of Image and text-->
 <section style="float:left; width:100%; margin-left:10%;">
     <section style="float:left;width:40%; ">
+        <!image -->
         <img src="Images/about.png" height="400px" width="100%"/>
     </section>
+    <!--Text of different font -->
     <section style="float:left;width:40%;">
         <H4>Best Cleaning Company</H4>
         <H2 style ="color:lightseagreen;">About Company</H2>
@@ -115,16 +132,21 @@
 </section>
 <br><br>
 <section style="float:left; width:100%;">
+    <br><br><br><br>
+    <!--a text heading-->
     <div style="float:left;width:40%; margin-left: 10% ">
         <H3 align="center">Want to get 20% off? Save the time and money?</H3>
     </div>
+    <!-- a hyper link-->
     <div style="float:left;width:40%; ">
         <a href="#self">More Service</a>
+        <br><br><br><br><br><br><br><br>
     </div>
 </section>
-
+<!--Detail about the team-->
 <h1 align="center" style ="color:lightseagreen;">Meet our Team</h1>
-<section style="float:left; width:100%;">
+<br><br><br><br>
+<section style="float:left; width:100%;" id="about">
     <div style="float:left; width:30%; margin-left: 10%" >
         <img src="Images/team@2x copy.png" height="200" width="200" style=" margin-left: 25%"/>
         <h3 align="center" style ="color:lightseagreen;">Jame Cawdale</h3>
@@ -139,15 +161,17 @@
         <img src="Images/team@2x copy 3.png" height="200" width="200" style=" margin-left: 25%"/>
         <h3 align="center" style ="color:lightseagreen;">Daina Mason</h3>
         <p align="center">Office Cleaner</p>
+        <br><br><br><br>
     </div>
-</section>
-<br><br>
 
-<H3 align="center" style ="color:lightseagreen;">Pricing Tables</H3>
+</section>
+
+<!--Detail about the price table-->
+<H2 align="center" style ="color:lightseagreen;">Pricing Tables</H2>
 <br><br>
 <section style="float:left; width:100%;">
     <section  style="float:left; width:20%; margin-left: 10%">
-        <p>Office Cleaning</p>
+        <p style ="color:lightseagreen;">Office Cleaning</p>
         <H1>$120</H1>
         <p>Per Month</p>
         <p>Cleaning Floors</p>
@@ -158,7 +182,7 @@
         <p>Buy Now</p>
     </section>
     <section  style="float:left; width:20%;">
-        <p>Home Cleaning</p>
+        <p style ="color:lightseagreen;">Home Cleaning</p>
         <H1>$120</H1>
         <p>Per Month</p>
         <p>Cleaning Floors</p>
@@ -169,7 +193,7 @@
         <p>Buy Now</p>
     </section>
     <section  style="float:left; width:20%;">
-        <p>Carpet Cleaning</p>
+        <p style ="color:lightseagreen;">Carpet Cleaning</p>
         <H1>$120</H1>
         <p>Per Month</p>
         <p>Cleaning Floors</p>
@@ -180,7 +204,7 @@
         <p>Buy Now</p>
     </section>
     <section  style="float:left; width:20%;">
-        <p>Apartment Cleaning</p>
+        <p style ="color:lightseagreen;">Apartment Cleaning</p>
         <H1>$120</H1>
         <p>Per Month</p>
         <p>Cleaning Floors</p>
@@ -193,7 +217,8 @@
     </section>
 </section>
 
-<section>
+<!--Section about blogs-->
+<section id="blog">
     <H1 align="center" style ="color:lightseagreen ;">Latest Blog</H1>
 </section>
 <br><br>
@@ -205,7 +230,7 @@
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
         <section style="display: inline-flex;
                      align-self: center;">
-
+            <!--Grey circle using svg-->
             <svg style="display: block; "><circle cx="5%" cy="10%" r="15" fill= "grey" ></circle></svg>
             <section style="position: relative"><p>By: <b>John Doe</b></p></section>
         </section>
@@ -225,7 +250,7 @@
         <p>By: <b>John Doe</b></p>
     </section>
 </section>
-
+<!--Testimonial section including text, pic and backgroun colour-->
 <section style="float:left; width:100%; background-color: ghostwhite;">
     <section style="float:left; width:70%; ">
         <H2 align="center" style ="color:lightseagreen ; margin-left: 60%" >Testimonials</H2>
@@ -239,34 +264,38 @@
 </section>
 
 <br><br>
+<!--Our Project Section Consist of the Image and form-->
 <section>
     <H2 align="center " style ="color:lightseagreen">Our Projects</H2>
 </section>
 <br><br>
-<section>
+<section  id="ourWork">
     <img src="Images/projects@2x copy.png" height="20%" width="100%"/>
     <img src="Images/quote.png" height="80%" width="100%"/>
 </section>
 
+<!--Form with validation-->
 <section  style="width:20%" >
     <section>
         <H2 align="center" style ="color:lightseagreen;" >Get A Instant Quote</H2>
     </section >
     <form >
-
+        <!--Name, which take input of first or both fist and last name with space or without space -->
+        <!--Min length 3 and max lenth 20-->
        <fieldset>
             <input type="text"
                    id="name" pattern="[a-zA-Z\s]+" minlength="3" maxlength="20" placeholder="Your Name*" style="width: 100%;" required>
        </fieldset>
         <fieldset>
-
+            <!--Email, with email validation-->
             <input type="email" placeholder="Your Email*" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" style="width: 100%;" required>
         </fieldset>
+        <!--Phone number with one 10 digit input-->
         <fieldset>
             <input type="text" placeholder="Phone" style="width: 100%;" pattern="^\d{10}$">
         </fieldset>
         <fieldset>
-
+            <!--message input-->
             <textarea placeholder="MESSAGE" maxlength="180" style="width: 100%;" rows="5"></textarea>
         </fieldset>
             <fieldset>
@@ -279,7 +308,7 @@
 
 
 <br><br><br>
-<footer style="float:left;">
+<footer style="float:left;" id="footer">
     <section style="float:left; width:30%; margin-left: 10%">
         <H1 style ="color:lightseagreen;">CleanNow</H1>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
@@ -294,6 +323,7 @@
         <p>Quote</p>
     </section>
     <section style="float:left; width:20%; ">
+        <!--Phone number with one 10 digit input-->
         <H3>Services</H3>
         <p>Commercial Cleaning</p>
         <p>House Cleaning</p>
@@ -301,6 +331,7 @@
         <p>Glass Cleaning</p>
         <p>Window Cleaning</p>
     </section>
+    <!--Contact Details-->
     <section style="float:left; width:20%; ">
         <H3>Contact Us</H3>
         <p>Phone: +12345679332</p>
