--- a/Index.html
+++ b/Index.html
@@ -51,6 +51,7 @@
         <H3 align="center" style ="color:lightseagreen;">Pick a Time</H3>
         <!--Making circles in why choose us section -->
         <svg>
+            <!--Making circles in why choose us section -->
             <circle cx="60%" cy="50%" r="50" fill= "lightseagreen" ></circle>
         </svg>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
@@ -66,6 +67,7 @@
 
     <section style="float:left; width:27%;">
         <H3 align="center" style ="color:lightseagreen;">Your pro arrives</H3>
+        <!--Making circles in why choose us section -->
         <svg>
             <circle cx="60%" cy="50%" r="50" fill= "lightseagreen"></circle>
         </svg>
@@ -88,18 +90,20 @@
         <img src="Images/services.png" height="186" width="269"/>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
     </section>
-    <!--Same secrions as Above -->
+    <!--Putting heading-->
     <section style="float:left; width:20%;">
         <H3 align="center" style ="color:lightseagreen;">Commertial Cleaning</H3>
         <img src="Images/services@2x.png" height="186" width="269"/>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
     </section>
     <section style="float:left; width:20%;">
+        <!--Putting heading-->
         <H3 align="center" style ="color:lightseagreen;">Office Cleaning</H3>
         <img src="Images/services@2x 2.png" height="186" width="269"/>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
     </section>
     <section style="float:left; width:20%;">
+        <!--Putting heading-->
         <H3 align="center" style ="color:lightseagreen;">Seasonal Cleaning</H3>
         <img src="Images/services@2x 3.png" height="186" width="269"/>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
@@ -146,18 +150,22 @@
 <!--Detail about the team-->
 <h1 align="center" style ="color:lightseagreen;">Meet our Team</h1>
 <br><br><br><br>
+<!--Detail about 3 different Team members-->
 <section style="float:left; width:100%;" id="about">
     <div style="float:left; width:30%; margin-left: 10%" >
+        <!--Cropped Image of member 1-->
         <img src="Images/team@2x copy.png" height="200" width="200" style=" margin-left: 25%"/>
         <h3 align="center" style ="color:lightseagreen;">Jame Cawdale</h3>
         <p align="center">Office Cleaner</p>
     </div>
     <div style="float:left; width:30%;">
+        <!--Cropped Image of member 2-->
         <img src="Images/team@2x copy 2.png" height="200" width="200" style=" margin-left: 25%" />
         <h3 align="center" style ="color:lightseagreen;">Joseph Doe</h3>
         <p align="center">Office Cleaner</p>
     </div>
     <div style="float:left; width:30%;">
+        <!--Cropped Image of member 3-->
         <img src="Images/team@2x copy 3.png" height="200" width="200" style=" margin-left: 25%"/>
         <h3 align="center" style ="color:lightseagreen;">Daina Mason</h3>
         <p align="center">Office Cleaner</p>
@@ -169,8 +177,10 @@
 <!--Detail about the price table-->
 <H2 align="center" style ="color:lightseagreen;">Pricing Tables</H2>
 <br><br>
+<!--$ 4 diffirent price section-->
 <section style="float:left; width:100%;">
     <section  style="float:left; width:20%; margin-left: 10%">
+        <!--Office Cleaning Price-->
         <p style ="color:lightseagreen;">Office Cleaning</p>
         <H1>$120</H1>
         <p>Per Month</p>
@@ -182,6 +192,7 @@
         <p>Buy Now</p>
     </section>
     <section  style="float:left; width:20%;">
+        <!--Home Cleaning Price-->
         <p style ="color:lightseagreen;">Home Cleaning</p>
         <H1>$120</H1>
         <p>Per Month</p>
@@ -194,6 +205,7 @@
     </section>
     <section  style="float:left; width:20%;">
         <p style ="color:lightseagreen;">Carpet Cleaning</p>
+        <!--Carpet Cleaning Price-->
         <H1>$120</H1>
         <p>Per Month</p>
         <p>Cleaning Floors</p>
@@ -204,6 +216,7 @@
         <p>Buy Now</p>
     </section>
     <section  style="float:left; width:20%;">
+        <!--Apartment Cleaning Price-->
         <p style ="color:lightseagreen;">Apartment Cleaning</p>
         <H1>$120</H1>
         <p>Per Month</p>
@@ -222,9 +235,12 @@
     <H1 align="center" style ="color:lightseagreen ;">Latest Blog</H1>
 </section>
 <br><br>
+<!--This section consist of 3 different sections-->
 <section style="float:left;">
     <section style="float:left; width:27%; margin-left: 10%">
+        <!--Image for blog-->
         <img src="Images/latest blog@2x copy.png" height="200px" width="100%"/>
+        <!--Writing date-->
         <p>03 Nov,2018</p>
         <h3 style ="color:lightseagreen ;">The best things you can do for your furniture</h3>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
@@ -236,23 +252,38 @@
         </section>
     </section>
     <section style="float:left; width:27%; ">
+        <!--Image for blog-->
         <img src="Images/latest blog@2x copy 2.png" height="200px" width="100%"/>
         <p>03 Nov,2018</p>
         <h3 style ="color:lightseagreen ;">The best things you can do for your furniture</h3>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
-        <p>By: <b>John Doe</b></p>
+        <section style="display: inline-flex;
+                     align-self: center;">
+            <!--Grey circle using svg-->
+            <svg style="display: block; "><circle cx="5%" cy="10%" r="15" fill= "grey" ></circle></svg>
+            <section style="position: relative"><p>By: <b>John Doe</b></p></section>
+        </section>
     </section>
     <section style="float:left; width:27%;">
+        <!--Image for blog-->
         <img src="Images/latest blog@2x copy 3.png" height="200px" width="100%"/>
+        <!--Writing date-->
         <p>03 Nov,2018</p>
         <h3 style ="color:lightseagreen ;">The best things you can do for your furniture</h3>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
-        <p>By: <b>John Doe</b></p>
+        <section style="display: inline-flex;
+                     align-self: center;">
+            <!--Grey circle using svg-->
+            <svg style="display: block; "><circle cx="5%" cy="10%" r="15" fill= "grey" ></circle></svg>
+            <section style="position: relative"><p>By: <b>John Doe</b></p></section>
+        </section>
     </section>
 </section>
 <!--Testimonial section including text, pic and backgroun colour-->
 <section style="float:left; width:100%; background-color: ghostwhite;">
+    <!--This section is specifically for allignment-->
     <section style="float:left; width:70%; ">
+
         <H2 align="center" style ="color:lightseagreen ; margin-left: 60%" >Testimonials</H2>
         <br><br>
         <img src="Images/testimonials@2x.png" height="381" width="383" style=" margin-left: 60%"/>
@@ -268,6 +299,7 @@
 <section>
     <H2 align="center " style ="color:lightseagreen">Our Projects</H2>
 </section>
+<!--Br for some line space between sections-->
 <br><br>
 <section  id="ourWork">
     <img src="Images/projects@2x copy.png" height="20%" width="100%"/>
@@ -281,13 +313,14 @@
     </section >
     <form >
         <!--Name, which take input of first or both fist and last name with space or without space -->
-        <!--Min length 3 and max lenth 20-->
+        <!--Min length 3 and max length 20-->
        <fieldset>
             <input type="text"
                    id="name" pattern="[a-zA-Z\s]+" minlength="3" maxlength="20" placeholder="Your Name*" style="width: 100%;" required>
        </fieldset>
         <fieldset>
             <!--Email, with email validation-->
+            <!--Email take some word followed by @ then some letters and then . and again by letters-->
             <input type="email" placeholder="Your Email*" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" style="width: 100%;" required>
         </fieldset>
         <!--Phone number with one 10 digit input-->
@@ -309,12 +342,16 @@
 
 <br><br><br>
 <footer style="float:left;" id="footer">
+    <!--Services  section part of footer-->
     <section style="float:left; width:30%; margin-left: 10%">
+        <!--Heading first section of the  footer-->
         <H1 style ="color:lightseagreen;">CleanNow</H1>
         <p>Lorem ipsum dolor sit amet, consecteur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua</p>
+        <!--Copyrights section along with the copy right sign-->
         <p> &#169; Copyright 2018 <b>CleanNow.</b> All Right Reserved</p>
     </section>
     <section style="float:left; width:20%; ">
+        <!--Services  section part of footer-->
         <H3>Quick View</H3>
         <p>Home</p>
         <p>About</p>
@@ -323,7 +360,7 @@
         <p>Quote</p>
     </section>
     <section style="float:left; width:20%; ">
-        <!--Phone number with one 10 digit input-->
+        <!--Services Provided part of footer-->
         <H3>Services</H3>
         <p>Commercial Cleaning</p>
         <p>House Cleaning</p>
