--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
     <hr >
     <!--task bar of the page-->
 
-        <div style="overflow: hidden; width: 100%">
+        <nav style="overflow: hidden; width: 100%">
             <!--links to various sections of the pages-->
             <H1 style="float: left; margin-left: 20%; color:lightseagreen " >CleanNow</H1>
             <a href="#slider"><p style=" float: left; margin-left: 20%; width:5%">Home</p></a>
@@ -24,7 +24,7 @@
             <a href="#blog"> <p style=" float: left; width:5%">Blog</p></a>
             <a href="#footer"> <p style=" float: left; width:5%">Contact</p></a>
             <a href="#footer"> <p style=" float: left; width:15%">Request A quote</p></a>
-        </div>
+        </nav>
     <hr>
 </head>
 <body>
@@ -36,7 +36,7 @@
     <H1 style="width:20%">
         High quality cleaning services. better and faster cleaning solution!
     </H1>
-    <H6 style="width:20%">The phrasal sequence of the Lorem lpsum text is now so widespread and commonplace that many DTP programmes can generate  dummy text using the starting sequence</H6>
+    <p style="width:20%" font>The phrasal sequence of the Lorem lpsum text is now so widespread and commonplace that many DTP programmes can generate  dummy text using the starting sequence</p>
     <a href="#self">Get in touch with us</a>
 </section>
 <BR><BR>
@@ -122,20 +122,20 @@
     </section>
     <!--Text of different font -->
     <section style="float:left;width:40%;">
-        <H4>Best Cleaning Company</H4>
+        <p><I>Best Cleaning Company</I></p>
         <H2 style ="color:lightseagreen;">About Company</H2>
-        <H5>We're ready to clean up your home,office house or warehouse with an astounding and acute precision</H5>
+        <p>We're ready to clean up your home,office house or warehouse with an astounding and acute precision</p>
         <H3 style ="color:lightseagreen;">We know the area</H3>
         <p>We ensure you from not doing our job as good as we promise.</p>
         <H3 style ="color:lightseagreen;">Quality cleans every time</H3>
         <p>Our long history and regular clients prove that our service is qualified.</p>
         <H3 style ="color:lightseagreen;">Highly-Trained Technicians</H3>
         <p>We ensure you from not doing our job as we promise.</p>
-        <a href="#self">More Info</a>
+        <p><a href="#self">More Info</a></p>
     </section>
 </section>
 <br><br>
-<section style="float:left; width:100%;">
+<section style="float:left; width:100%; background-color: lightseagreen">
     <br><br><br><br>
     <!--a text heading-->
     <div style="float:left;width:40%; margin-left: 10% ">
@@ -309,7 +309,7 @@
 <!--Form with validation-->
 <section  style="width:20%" >
     <section>
-        <H2 align="center" style ="color:lightseagreen;" >Get A Instant Quote</H2>
+        <H2 align="center" style ="color:lightseagreen;" ><strong>Get A Instant Quote</strong></H2>
     </section >
     <form >
         <!--Name, which take input of first or both fist and last name with space or without space -->
@@ -329,10 +329,10 @@
         </fieldset>
         <fieldset>
             <!--message input-->
-            <textarea placeholder="MESSAGE" maxlength="180" style="width: 100%;" rows="5"></textarea>
+            <textarea placeholder="MESSAGE" maxlength="180" style="width: 100%;" rows="5" required></textarea>
         </fieldset>
             <fieldset>
-                  <button style="align-content: center; width: 100%">Send Message</button>
+                  <button style="align-content: center; width: 100%" >Send Message</button>
             </fieldset>
     </form>
 
