--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <header>
         <div style="overflow: hidden;">
             <p style="float: left; text-indent: 280px;">Welcome to our Cleaning Company</p>
-            <add style="float: left; text-indent: 400px;">Phone:+16176526246 Email:<span style ="color:lightseagreen;">info@comapny.com</span></add>
+            <p style="float: left; text-indent: 400px;">Phone:+16176526246 Email:<span style ="color:lightseagreen;">info@comapny.com</span></p>
         </div>
     </header>
     <hr >
